# pistream

./: android-companion-foundation.md  android-manual-setup-guide.md  android-phase1-implementation-notes.md  phase1-android-qa-checklist.md  phase3-android-pi-setup-and-operations.md  phase3-api-regression-matrix.md  phase3-manual-smoke-test-checklist.md  pi-local-api-phase3-implementation-plan.md  pi-local-api-phase3-test-contract.md  pi-whole-house-audio.md  real-device-setup-june-13-2026.md  tomorrow-manual-setup-raspberry-pi-backend.md
android-app/: gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/pistream/companion/: MainActivity.kt  PiStreamApplication.kt
android-app/app/src/main/java/com/pistream/companion/data/: AppContainer.kt  BaseUrlNormalizer.kt  ClientIdentityStore.kt  PhoneBluetoothScanner.kt  PiApiClient.kt  PiNetworkDiscoverer.kt  PiRepository.kt  SavedPiStore.kt  SecureTokenStore.kt
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-app/gradle/: libs.versions.toml
pi-api/: .gitignore  README.md  config.example.json  config.real.example.json  pyproject.toml  token.example
pi-api/deploy/: pihouse-api.service  setup-pi.sh
pi-api/pihouse_api/: __init__.py  adapters.py  app.py  auth.py  bootstrap.py  config.py  discovery.py  operations.py  pairing.py  status.py
pi-api/tests/: test_api.py  test_bootstrap.py  test_pairing.py  test_real_adapter.py
(+6 files in other folders)
