[project]
name = "pihouse-api"
version = "0.1.0"
description = "Raspberry Pi local API scaffold for PiHouse audio Phase 3."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.7,<3"
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "httpx>=0.27,<1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
